# flan_t5

./: .gitignore  Makefile  README.md  pyproject.toml  run.ipynb
configs/: base.yaml
configs/exp31_scaling_tasks/: flan_t5_small_100tasks.yaml  flan_t5_small_1060tasks.yaml  flan_t5_small_300tasks.yaml  flan_t5_small_50tasks.yaml  flan_t5_small_600tasks.yaml
configs/exp32_scaling_model/: flan_t5_base_gsm8k.yaml  flan_t5_base_sat_math.yaml  flan_t5_base_sat_reading.yaml  flan_t5_small_gsm8k.yaml  flan_t5_small_sat_math.yaml  flan_t5_small_sat_reading.yaml
configs/exp33_cot/: flan_t5_base_no_cot.yaml  flan_t5_base_with_cot.yaml  flan_t5_small_no_cot.yaml  flan_t5_small_with_cot.yaml
docs/: phan_cong_thuc_nghiem.md
docs/specs/: 2026-07-11-flan-t5-experiment-design.md
scripts/: evaluate.py  run_experiment.py  train.py
src/data/: dataset.py  preprocessing.py
src/evaluation/: evaluate.py  metrics.py
src/models/: model.py
src/training/: callbacks.py  trainer.py
src/utils/: config.py  download.py  helpers.py  logging.py
tests/: test_config.py  test_helpers.py
