[project]
name = "flan-t5-experiments"
version = "0.1.0"
description = "Flan-T5 instruction fine-tuning experiments replicating Scaling Instruction-Finetuned Language Models"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0,<3.0.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "pyyaml>=6.0",
    "tensorboard>=2.15.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.0",
    "sacrebleu>=2.3.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "ijson>=3.5.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
eval = [
    "lm-eval>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
